--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Django==5.2.1
 django-extensions==4.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.2.1
 psycopg2==2.9.10
 PyJWT==2.9.0
